--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,6 +1,10 @@
+h1 {
+	font-family: 'Nixie One', cursive;
+}
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 a {
