--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,17 @@
+/* imported from alt repo */
+
+nav {
+  background-color: #000;
+  
+}
+
 h1 {
 	font-family: 'Nixie One', cursive;
+}
+
+html, body{
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -7,6 +19,25 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-a {
-  color: #00B7FF;
+.profile-img {
+  border-radius: 50%;
+}
+
+#splash {
+  height: 100%;
+  width: 100%;
+  background-image: url('./bg.jpg');
+  background-size: cover;
+}
+
+.product{
+  margin-bottom: 1em;
+  
+}
+.product img {
+  box-shadow: 0px 0px 5px black;
+}
+
+.products{
+  text-align: center;
 }
