--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,14 @@ nav {
 }
 
 h1 {
-	font-family: 'Nixie One', cursive;
+  font-family: Avenir;
+  padding: 0;
+}
+
+.logo {
+  width: 25%;
+  height: 25%;
+  padding: 0px;
 }
 
 html, body{
