--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,9 +3,13 @@ nav {
   
 }
 
-h1 {
+h1, h2, h3, h4, p {
   font-family: Avenir;
   padding: 0;
+}
+
+p, h3, h4 {
+  font-size: 14px;
 }
 
 .logo {
