--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,3 +46,25 @@ body {
 .products{
   text-align: center;
 }
+
+@-webkit-keyframes bgTrans {
+  0% {
+    
+  } 50% {
+
+  } 100% {
+
+  }
+}
+
+@-moz-keyframes bgTrans {
+
+}
+
+@-o-keyframes bgTrans {
+
+}
+
+@keyframes bgTrans {
+
+}
