--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,6 @@
 nav {
-  background-color: white;
+  background-color: rgba(223, 222, 222, 0.658);
   font-family: Avenir;
-
-  
 }
 
 h1, h2, h3, h4, p {
