--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -1,3 +1,14 @@
+.container.profile{
+  margin-top: 1em;
+  padding-top: 1em;
+}
+
 .profile-img {
     border-radius: 50%;
+    box-shadow: 0px 0px 10px black;
   }
+
+#profileInfo{
+  margin-top: 1em;
+}
+
