--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -5,6 +5,10 @@ nav.navbar.navbar-default {
   background-image: url('../../assets/img/wood.jpg');
 }
 
+#navId {
+  margin-bottom: 1em;
+}
+
 #logo{
   height: 40%;
   width: 40%;
