added to gitignore, fixed height of wrapper

--- a/client/src/components/wrapper/wrapper.css
+++ b/client/src/components/wrapper/wrapper.css
@@ -1,5 +1,5 @@
 .wrapper {
-  min-height: 100%;
+  min-height: 69vh;
   box-shadow: 0px 0px 5px black;
   background-color: rgba(150, 150, 150, 0.774);
   /* background-color: rgba(199, 230, 204, 0.774); */
