--- a/client/src/components/wrapper/wrapper.css
+++ b/client/src/components/wrapper/wrapper.css
@@ -2,5 +2,5 @@
   min-height: 69vh;
   box-shadow: 0px 0px 5px black;
   background-color: rgba(150, 150, 150, 0.774);
-  /* background-color: rgba(199, 230, 204, 0.774); */
+  overflow-y: auto;
 }
