splash page updates to text and alignment

--- a/client/src/components/splash/splash.css
+++ b/client/src/components/splash/splash.css
@@ -48,6 +48,7 @@ input {
 
 #splash {
   flex-direction: column;
+  text-align: center;
   align-items: center;
   justify-content: center; 
   margin-top: 3em;
