--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -3,6 +3,7 @@ nav.navbar.navbar-default {
   border-radius: 3%;
   box-shadow: 1px 1px 1px teal;
   opacity: .9;
+  color: white;
   background-image: url('../../assets/img/wood.jpg');
 }
 
@@ -22,6 +23,10 @@ nav.navbar.navbar-default {
 #options{
   text-align: right;
   text-shadow: 1px 1px black;
+  color: black;
+}
+a#options {
+  color: black;
 }
 
 li.navbar-text {
