--- a/client/src/components/splash/splash.css
+++ b/client/src/components/splash/splash.css
@@ -3,7 +3,10 @@
     height: 25%;
     padding: 0px;
   }
-
+h3 {
+  color: black;
+  text-decoration: none;
+}
 .splashGreeting {
   margin-bottom: -1em;
 }
@@ -14,7 +17,7 @@
 }
 
 .signIn {
-  margin-top: 2em;
+  margin-top: 1em;
   justify-content: center;
   text-align: center;
 }
@@ -37,9 +40,31 @@ input {
 }
 
 .icon {
-  height: 3em;
-  width: 3em;
+  height: 2em;
+  width: 2em;
+  margin: .5em;
+}
+
+.icon-border {
+  /* border: 2px solid black; */
   margin: 1em;
+  padding: .2em .5em ;
+  background-color: white;
+  font-size: .75em;
+  color: black;
+  font-weight: 500;
+  text-align: center;
+}
+
+#submit {
+  border: 5px solid black;
+  margin: 0 auto;
+  padding: .2em .5em ;
+  background-color: black;
+  font-size: 1em;
+  color: white;
+  font-weight: 500;
+  margin-bottom: 2em;
 }
 
 #splashLogo {
