--- a/client/src/components/wrapper/wrapper.css
+++ b/client/src/components/wrapper/wrapper.css
@@ -1,7 +1,23 @@
 .wrapper {
-  min-height: 69vh;
+  height: 69vh;
   box-shadow: 0px 0px 5px black;
   background-color: rgba(150, 150, 150, 0.774);
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+
+.wrapper::-webkit-scrollbar {
+  width: 12px;
+}
+
+.wrapper::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); 
+  border-radius: 20px;
+}
+
+.wrapper::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); 
+  background:  rgba(26, 236, 208, 0.808);
 }
