border radius on header

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,6 +1,6 @@
 nav.navbar.navbar-default {
   margin-bottom: 0;
-  border-radius: 3%;
+  border-radius: 5px;
   box-shadow: 1px 1px 1px teal;
   opacity: .9;
   color: white;
