--- a/client/src/pages/productsearch/product-search.css
+++ b/client/src/pages/productsearch/product-search.css
@@ -21,3 +21,15 @@
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); 
   background:  rgba(26, 236, 208, 0.808);
 }
+
+::-webkit-input-placeholder {
+  text-align: left;
+}
+
+::-webkit-input {
+  text-align: left;
+}
+
+.form-control {
+  text-align: left;
+}
