--- a/client/src/components/productpanel/product-panel.css
+++ b/client/src/components/productpanel/product-panel.css
@@ -7,6 +7,7 @@
 
 .productRow{
     box-shadow: 0px 0px 1em 0px black;
+    background: rgba(255, 255, 255, 0.85);
     padding-top: 1em;
     padding-bottom: 1em;
     margin-bottom: 1em;
