--- a/client/src/pages/productsearch/product-search.css
+++ b/client/src/pages/productsearch/product-search.css
@@ -4,7 +4,7 @@
   background-color: rgba(150, 150, 150, 0.774);
   overflow-y: auto;
   overflow-x: hidden;
-
+}
 
 ::-webkit-input-placeholder {
   text-align: left;
@@ -16,3 +16,4 @@
 
 .form-control {
   text-align: left;
+}
