--- a/client/src/components/productpanel/product-panel.css
+++ b/client/src/components/productpanel/product-panel.css
@@ -5,6 +5,11 @@
     box-shadow: 0px 0px 25px gainsboro;
 }
 
+.productPrice{
+    display: flex;
+    flex-direction: column;
+}
+
 .productRow{
     box-shadow: 0px 0px 1em 0px black;
     background: rgba(255, 255, 255, 0.85);
