--- a/client/src/pages/productsearch/product-search.css
+++ b/client/src/pages/productsearch/product-search.css
@@ -1,11 +1,3 @@
-.wrapper {
-  height: 69vh;
-  box-shadow: 0px 0px 5px black;
-  background-color: rgba(150, 150, 150, 0.774);
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
 ::-webkit-input-placeholder {
   text-align: left;
 }
@@ -16,4 +8,27 @@
 
 .form-control {
   text-align: left;
+}
+
+.searchFlex{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+#buttonRow {
+  justify-content: center;
+}
+
+.searchRow {
+  width: 100%;
+  justify-content: center;
+}
+
+#searchbar {
+  width: 100%;
 }
