--- a/client/src/components/productpanel/product-panel.css
+++ b/client/src/components/productpanel/product-panel.css
@@ -1,6 +1,5 @@
 .productImage{
-    height: 150px;
-    width: 150px;
+    width: 100%;
     border-radius: 5%;
     box-shadow: 0px 0px 25px gainsboro;
 }
