--- a/client/src/components/productpanel/product-panel.css
+++ b/client/src/components/productpanel/product-panel.css
@@ -4,6 +4,7 @@
     box-shadow: 0px 0px 25px gainsboro;
 }
 
+
 .productPrice{
     display: flex;
     flex-direction: column;
@@ -24,9 +25,15 @@
 }
 
 #rentee {
-    margin-top: 1em;
+    flex-direction: column;
 }
 
 #rentee:hover {
     cursor: pointer;
+}
+
+@media only screen and (max-width: 767px){
+    .productPrice {
+        align-items: flex-end;
+    }
 }
