--- a/client/src/components/splash/splash.css
+++ b/client/src/components/splash/splash.css
@@ -9,18 +9,37 @@ h3 {
   text-decoration: none;
 }
 
-.splashGreeting {
-  margin-bottom: -1em;
-}
-
 .signIn {
-  margin-top: 1em;
   justify-content: center;
   text-align: center;
 }
 
 #username{
   margin-right: .75em;
+}
+
+.logininput {
+  text-align: center;
+  border: solid 2px teal;
+  border-radius: 20px;
+  margin-bottom: 1em;
+}
+
+.logininput::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  text-align: center;
+}
+.logininput::-moz-placeholder { /* Firefox 19+ */
+  text-align: center;
+}
+.logininput:-ms-input-placeholder { /* IE 10+ */
+  text-align: center;
+}
+.logininput:-moz-placeholder { /* Firefox 18- */
+  text-align: center;
+}
+
+.logSubmit {
+  justify-content: center;
 }
 
 #password{
@@ -31,10 +50,6 @@ h3 {
   text-align: center;
 }
 
-input {
-  text-align: center;
-  margin-bottom: 1em;
-}
 
 .icon {
   height: 2em;
@@ -43,17 +58,23 @@ input {
 }
 
 .icon-border {
-  /* border: 2px solid black; */
+  border: solid 2px teal;
   margin: 1em;
-  padding: .2em .5em ;
+  padding: .2em .5em;
   background-color: white;
   font-size: .75em;
   color: black;
-  font-weight: 500;
+  font-weight: 700;
   text-align: center;
+  border-radius: 50px;
 }
 
-#submit {
+.icon-border:hover{
+  background-color: rgba(0, 128, 128, 0.4);
+  color: white;
+}
+
+#submitBtn {
   border: 5px solid black;
   margin: 0 auto;
   padding: .2em .5em ;
@@ -61,7 +82,7 @@ input {
   font-size: 1em;
   color: white;
   font-weight: 500;
-  margin-bottom: 2em;
+  margin-bottom: 0.5em;
 }
 
 #splashLogo {
