--- a/client/src/components/newmessage/newmessage.css
+++ b/client/src/components/newmessage/newmessage.css
@@ -10,6 +10,10 @@
   background-color: rgb(84, 172, 99);
 }
 
+.btn-mine:hover{
+  box-shadow: 0px 0px 5px white;
+}
+
 #run-search {
   margin-top: 0.25em;
 }
