--- a/client/src/components/newmessage/newmessage.css
+++ b/client/src/components/newmessage/newmessage.css
@@ -14,6 +14,14 @@
   box-shadow: 0px 0px 5px white;
 }
 
+.btn-tan {
+  background-color: tan;
+}
+
+.contact-button:hover {
+  box-shadow: 0px 0px 10px black;
+}
+
 #run-search {
   margin-top: 0.25em;
 }
